--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -325,7 +325,7 @@
                         </div>
                         <div class="creditCard">
                             <img class="creditCardIcon" src="../img/credit_Card_Icon.svg" alt="Credit Card">
-                            <p class="sentenceDelivery">Oneline payment</p>
+                            <p class="sentenceDelivery">Online payment</p>
                         </div>
                         <div class="return">
                             <img class="returnIcon" src="../img/return_Icon.svg" alt="Return icon">
@@ -334,45 +334,45 @@
                     </article>
                 </div>
                 <div class="accordion accordion-flush containerAccordion" id="accordionFlushExample">
-                    <div class="accordion-item">
-                    <h2 class="accordion-header title">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                            <p>Reviews</p>
-                        </button>
-                    </h2>
-                    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">
-                            <p>"I love the skater outfit I got from <span>Break a Leg!</span>. It's super comfortable and looks great. Fast delivery too!"</p>
-                            <p>"The customer service at <span>Break a Leg!</span> is top-notch. They helped me with a return, and it was a breeze. Will definitely shop here again!"</p>
-                            <p>"I'm impressed with the quality of the products from <span>Break a Leg!</span>. The skater shorts are my new favorites. Highly recommended</p>
+                    <div class="accordion-item accordionItem">
+                        <h2 class="accordion-header title">
+                            <button class="accordion-button collapsed btnCollapse shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                <p>Reviews</p>
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse accordionCollapse" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body accordionBody">
+                                <p>"I love the skater outfit I got from <span>Break a Leg!</span>. It's super comfortable and looks great. Fast delivery too!"</p>
+                                <p>"The customer service at <span>Break a Leg!</span> is top-notch. They helped me with a return, and it was a breeze. Will definitely shop here again!"</p>
+                                <p>"I'm impressed with the quality of the products from <span>Break a Leg!</span>. The skater shorts are my new favorites. Highly recommended</p>
+                            </div>
                         </div>
                     </div>
-                    </div>
-                    <div class="accordion-item">
-                    <h2 class="accordion-header title">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                            <p>Description</p>
-                        </button>
-                    </h2>
-                    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">
-                            <p>Introducing the ultimate skater's ensemble - a fusion of style, comfort, and functionality. Our Skater's Delight Outfit is designed for those who live to ride, kickflip, and carve through the urban landscape. </p>
-                            <p>Our Skater's Delight Outfit is more than just clothes; it's an expression of your passion for the streets. Perfect for the skate park, cruising through the neighborhood, or simply showcasing your love for skate culture.</p>
+                    <div class="accordion-item accordionItem">
+                        <h2 class="accordion-header title">
+                            <button class="accordion-button collapsed btnCollapse shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                <p>Description</p>
+                            </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse accordionCollapse" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body accordionBody">
+                                <p>Introducing the ultimate skater's ensemble - a fusion of style, comfort, and functionality. Our Skater's Delight Outfit is designed for those who live to ride, kickflip, and carve through the urban landscape. </p>
+                                <p>Our Skater's Delight Outfit is more than just clothes; it's an expression of your passion for the streets. Perfect for the skate park, cruising through the neighborhood, or simply showcasing your love for skate culture.</p>
+                            </div>
                         </div>
                     </div>
-                    </div>
-                    <div class="accordion-item">
-                    <h2 class="accordion-header title">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                            <p>Delivery & Return</p>
-                        </button>
-                    </h2>
-                    <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">
-                            <p>Delivery: Fast and reliable shipping options. Track your order and enjoy worldwide delivery.</p>
-                            <p> Return: 30-day return policy. Hassle-free process. Choose a refund or exchange. Your satisfaction is our priority.</p>
+                    <div class="accordion-item accordionItem">
+                        <h2 class="accordion-header title">
+                            <button class="accordion-button collapsed btnCollapse shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                <p>Delivery & Return</p>
+                            </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse accordionCollapse" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body accordionBody">
+                                <p>Delivery: Fast and reliable shipping options. Track your order and enjoy worldwide delivery.</p>
+                                <p> Return: 30-day return policy. Hassle-free process. Choose a refund or exchange. Your satisfaction is our priority.</p>
+                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </div>
