--- a/css/main.css
+++ b/css/main.css
@@ -3419,9 +3419,21 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .showRoom .rightSide .infoProduct .complementInfo .delivery .deliveryIcon, .showRoom .rightSide .infoProduct .complementInfo .delivery .creditCardIcon, .showRoom .rightSide .infoProduct .complementInfo .delivery .returnIcon, .showRoom .rightSide .infoProduct .complementInfo .creditCard .deliveryIcon, .showRoom .rightSide .infoProduct .complementInfo .creditCard .creditCardIcon, .showRoom .rightSide .infoProduct .complementInfo .creditCard .returnIcon, .showRoom .rightSide .infoProduct .complementInfo .return .deliveryIcon, .showRoom .rightSide .infoProduct .complementInfo .return .creditCardIcon, .showRoom .rightSide .infoProduct .complementInfo .return .returnIcon {
   width: 35px;
 }
-.showRoom .rightSide .containeraccordion .title {
+.showRoom .rightSide .containerAccordion .accordionItem .title .btnCollapse {
   width: 100%;
-  height: 40px;
+  font-weight: 700;
+  color: #000000;
+  background-color: #ffffff;
+}
+.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse {
+  border: 1px solid #d9d9d9;
+}
+.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBody p {
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBody p span {
+  color: #da2222;
   font-weight: 700;
 }
 
