--- a/scss/_show_Room.scss
+++ b/scss/_show_Room.scss
@@ -139,8 +139,19 @@
                     }
                 }
                 .wishlistIcon{
-                    width:25px;
+                    width:50px;
                     cursor: pointer;
+                    padding-top: 11px;
+                    padding-right: 11px;
+                    padding-left: 11px;
+                    padding-bottom: 11px;
+                    border: 1px solid black;
+                    &:hover{
+                        border: 1px solid #d9d9d9;
+                        background-color: #d9d9d9;
+
+                    }
+
                 }
             }
             .complementInfo{
