Showroom Skull SocialMedia & Arrowup

--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -282,6 +282,29 @@
             </article>
         </section>
 
+        <!-- ArrowUp -->
+
+        <section class="arrowUp">
+            <a href="#" class="directionUp">
+                <img src="../img/arrowup_Icon.svg" alt="" class="arrowUpIcon">
+            </a>
+        </section>
+
+        <!-- Skull SocialMedia -->
+
+        <section class="skullSocialMedia">
+            <article class="socialMedia">
+                <img src="../img/skull.svg" alt="" class="skullIcon">
+                <ul>
+                    <li><a href="https://www.instagram.com/" target="_blank" class="item"><img src="../img/instagram.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.youtube.com/" target="_blank" class="item"><img src="../img/youtube.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://www.facebook.com/" target="_blank" class="item"><img src="../img/facebook.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://twitter.com/?lang=es" target="_blank" class="item"><img src="../img/twitter.svg" alt="" class="itemSocial"></a></li>
+                    <li><a href="https://co.pinterest.com/" target="_blank" class="item"><img src="../img/pinterest.svg" alt="" class="itemSocial"></a></li>
+                </ul>
+            </article>
+        </section>
+
         <!-- ShowRoom -->
 
         <section class="showRoom">
