--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -320,6 +320,9 @@
                     <article class="color">
                         <h3 class="titleColor">Color</h3>
                         <div class="containerColor">
+                            <div class="smallPic">
+                                <img src="../img/pic25.webp" alt="" class="itemProduct">
+                            </div>
                             <div class="colorBlack"></div>
                             <div class="colorWhite"></div>
                         </div>
@@ -365,9 +368,24 @@
                         </h2>
                         <div id="flush-collapseOne" class="accordion-collapse collapse accordionCollapse" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body accordionBody">
-                                <p>"I love the skater outfit I got from <span>Break a Leg!</span>. It's super comfortable and looks great. Fast delivery too!"</p>
-                                <p>"The customer service at <span>Break a Leg!</span> is top-notch. They helped me with a return, and it was a breeze. Will definitely shop here again!"</p>
-                                <p>"I'm impressed with the quality of the products from <span>Break a Leg!</span>. The skater shorts are my new favorites. Highly recommended</p>
+                                <div class="case">
+                                    <p>"I love the skater outfit I got from <span>Break a Leg!</span>. It's super comfortable and looks great. Fast delivery too!"</p>
+                                    <img class="rating" src="../img/rating2.webp" alt="Rating icon">
+                                    <p class="name">Steve G.</p>
+                                    <p class="date">01/23/2023</p>
+                                </div>
+                                <div class="case">
+                                    <p>"The customer service at <span>Break a Leg!</span> is top-notch. They helped me with a return, and it was a breeze. Will definitely shop here again!"</p>
+                                    <img class="rating" src="../img/rating2.webp" alt="Rating icon">
+                                    <p class="name">Daniel M.</p>
+                                    <p class="date">09/21/2023</p>
+                                </div>
+                                <div class="case">
+                                    <p>"I'm impressed with the quality of the products from <span>Break a Leg!</span>. The skater shorts are my new favorites. Highly recommended</p>
+                                    <img class="rating" src="../img/rating2.webp" alt="Rating icon">
+                                    <p class="name">Erick W.</p>
+                                    <p class="date">07/14/2023</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -378,7 +396,7 @@
                             </button>
                         </h2>
                         <div id="flush-collapseTwo" class="accordion-collapse collapse accordionCollapse" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body accordionBody">
+                            <div class="accordion-body accordionBodyDos">
                                 <p>Introducing the ultimate skater's ensemble - a fusion of style, comfort, and functionality. Our Skater's Delight Outfit is designed for those who live to ride, kickflip, and carve through the urban landscape. </p>
                                 <p>Our Skater's Delight Outfit is more than just clothes; it's an expression of your passion for the streets. Perfect for the skate park, cruising through the neighborhood, or simply showcasing your love for skate culture.</p>
                             </div>
@@ -391,9 +409,9 @@
                             </button>
                         </h2>
                         <div id="flush-collapseThree" class="accordion-collapse collapse accordionCollapse" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body accordionBody">
+                            <div class="accordion-body accordionBodyDos">
                                 <p>Delivery: Fast and reliable shipping options. Track your order and enjoy worldwide delivery.</p>
-                                <p> Return: 30-day return policy. Hassle-free process. Choose a refund or exchange. Your satisfaction is our priority.</p>
+                                <p>Return: 30-day return policy. Hassle-free process. Choose a refund or exchange. Your satisfaction is our priority.</p>
                             </div>
                         </div>
                     </div>
