--- a/css/main.css
+++ b/css/main.css
@@ -3268,13 +3268,11 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   width: 100%;
   height: auto;
 }
-.showRoom .leftSide {
-  overflow: hidden;
-}
 .showRoom .leftSide .itemProduct {
   width: auto;
   height: auto;
   object-fit: cover;
+  overflow: hidden;
 }
 .showRoom .rightSide {
   display: flex;
@@ -3295,7 +3293,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   justify-content: space-between;
   align-items: center;
   padding: 5px 5px;
-  background-color: #d9d9d9;
+  background-color: #f1f1f1;
 }
 .showRoom .rightSide .infoProduct .productRating .product {
   font-size: 1.2rem;
@@ -3324,15 +3322,27 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   align-items: flex-start;
   gap: 55px;
 }
+.showRoom .rightSide .infoProduct .color .containerColor .smallPic {
+  overflow: hidden;
+}
+.showRoom .rightSide .infoProduct .color .containerColor .smallPic .itemProduct {
+  width: 50px;
+  height: 70px;
+  object-fit: cover;
+  border: 1px solid #f1f1f1;
+}
+.showRoom .rightSide .infoProduct .color .containerColor .smallPic .itemProduct:hover {
+  border: 1px solid #000000;
+}
 .showRoom .rightSide .infoProduct .color .containerColor .colorBlack, .showRoom .rightSide .infoProduct .color .containerColor .colorWhite {
   cursor: pointer;
   width: 50px;
   height: 70px;
   background-color: #000000;
-  border: 1px solid #000000;
+  border: 1px solid #f1f1f1;
 }
 .showRoom .rightSide .infoProduct .color .containerColor .colorBlack:hover, .showRoom .rightSide .infoProduct .color .containerColor .colorWhite:hover {
-  border: 1px solid #a3a3a3;
+  border: 1px solid #000000;
 }
 .showRoom .rightSide .infoProduct .color .containerColor .colorWhite {
   background-color: #ffffff;
@@ -3364,7 +3374,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-weight: 700;
   cursor: pointer;
   color: #000000;
-  background-color: #d9d9d9;
+  background-color: #f1f1f1;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -3402,11 +3412,10 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   padding-right: 11px;
   padding-left: 11px;
   padding-bottom: 11px;
-  border: 1px solid black;
+  border: 1px solid #f1f1f1;
 }
 .showRoom .rightSide .infoProduct .addToCart .wishlistIcon:hover {
-  border: 1px solid #d9d9d9;
-  background-color: #d9d9d9;
+  border: 1px solid #000000;
 }
 .showRoom .rightSide .infoProduct .complementInfo {
   width: 100%;
@@ -3424,9 +3433,21 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .showRoom .rightSide .infoProduct .complementInfo .delivery, .showRoom .rightSide .infoProduct .complementInfo .creditCard, .showRoom .rightSide .infoProduct .complementInfo .return {
   width: 100%;
   height: auto;
+  cursor: pointer;
+}
+.showRoom .rightSide .infoProduct .complementInfo .delivery:hover > .deliveryIcon, .showRoom .rightSide .infoProduct .complementInfo .creditCard:hover > .deliveryIcon, .showRoom .rightSide .infoProduct .complementInfo .return:hover > .deliveryIcon {
+  transform: scale(107%);
+}
+.showRoom .rightSide .infoProduct .complementInfo .delivery:hover > .creditCardIcon, .showRoom .rightSide .infoProduct .complementInfo .creditCard:hover > .creditCardIcon, .showRoom .rightSide .infoProduct .complementInfo .return:hover > .creditCardIcon {
+  transform: scale(107%);
+}
+.showRoom .rightSide .infoProduct .complementInfo .delivery:hover > .returnIcon, .showRoom .rightSide .infoProduct .complementInfo .creditCard:hover > .returnIcon, .showRoom .rightSide .infoProduct .complementInfo .return:hover > .returnIcon {
+  transform: scale(108%);
 }
 .showRoom .rightSide .infoProduct .complementInfo .delivery .deliveryIcon, .showRoom .rightSide .infoProduct .complementInfo .delivery .creditCardIcon, .showRoom .rightSide .infoProduct .complementInfo .delivery .returnIcon, .showRoom .rightSide .infoProduct .complementInfo .creditCard .deliveryIcon, .showRoom .rightSide .infoProduct .complementInfo .creditCard .creditCardIcon, .showRoom .rightSide .infoProduct .complementInfo .creditCard .returnIcon, .showRoom .rightSide .infoProduct .complementInfo .return .deliveryIcon, .showRoom .rightSide .infoProduct .complementInfo .return .creditCardIcon, .showRoom .rightSide .infoProduct .complementInfo .return .returnIcon {
   width: 35px;
+  transform: scale(100%);
+  transition: transform 0.3s ease;
 }
 .showRoom .rightSide .containerAccordion .accordionItem .title .btnCollapse {
   width: 100%;
@@ -3435,13 +3456,57 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   background-color: #ffffff;
 }
 .showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse {
-  border: 1px solid #d9d9d9;
+  border: 1px solid #f1f1f1;
 }
-.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBody p {
+.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBody:nth-child(1) {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-end;
+  gap: 5px;
+}
+.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBody:nth-child(1) .case {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-end;
+  cursor: pointer;
+  background-color: #f1f1f1;
+  padding: 5px;
+}
+.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBody:nth-child(1) .case:hover {
+  background-color: #f8f8f8;
+}
+.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBody:nth-child(1) .case p {
   font-size: 0.8rem;
   font-weight: 600;
 }
-.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBody p span {
+.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBody:nth-child(1) .case p span {
+  color: #da2222;
+  font-weight: 700;
+}
+.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBody:nth-child(1) .case .rating {
+  width: 70px;
+}
+.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBody:nth-child(1) .case .name {
+  font-size: 0.9rem;
+  font-weight: 700;
+}
+.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBody:nth-child(1) .case .date {
+  font-size: 0.7rem;
+  font-weight: 600;
+}
+.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBodyDos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBodyDos p {
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+.showRoom .rightSide .containerAccordion .accordionItem .accordionCollapse .accordionBodyDos p span {
   color: #da2222;
   font-weight: 700;
 }
