Showroom Rating icon

--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -315,7 +315,7 @@
                 <div class="infoProduct">
                     <article class="productRating">
                         <p class="product">Outfit...$499</p>
-                        <img class="rating" src="../img/rating.webp" alt="Rating icon">
+                        <img class="rating" src="../img/rating2.webp" alt="Rating icon">
                     </article>
                     <article class="color">
                         <h3 class="titleColor">Color</h3>
