--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -372,19 +372,19 @@
                                     <p>"I love the skater outfit I got from <span>Break a Leg!</span>. It's super comfortable and looks great. Fast delivery too!"</p>
                                     <img class="rating" src="../img/rating2.webp" alt="Rating icon">
                                     <p class="name">Steve G.</p>
-                                    <p class="date">01/23/2023</p>
+                                    <p class="date"><span>01/23/2023</span></p>
                                 </div>
                                 <div class="case">
                                     <p>"The customer service at <span>Break a Leg!</span> is top-notch. They helped me with a return, and it was a breeze. Will definitely shop here again!"</p>
                                     <img class="rating" src="../img/rating2.webp" alt="Rating icon">
                                     <p class="name">Daniel M.</p>
-                                    <p class="date">09/21/2023</p>
+                                    <p class="date"><span>09/21/2023</span></p>
                                 </div>
                                 <div class="case">
                                     <p>"I'm impressed with the quality of the products from <span>Break a Leg!</span>. The skater shorts are my new favorites. Highly recommended</p>
                                     <img class="rating" src="../img/rating2.webp" alt="Rating icon">
                                     <p class="name">Erick W.</p>
-                                    <p class="date">07/14/2023</p>
+                                    <p class="date"><span>07/14/2023</span></p>
                                 </div>
                             </div>
                         </div>
@@ -410,8 +410,8 @@
                         </h2>
                         <div id="flush-collapseThree" class="accordion-collapse collapse accordionCollapse" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body accordionBodyDos">
-                                <p>Delivery: Fast and reliable shipping options. Track your order and enjoy worldwide delivery.</p>
-                                <p>Return: 30-day return policy. Hassle-free process. Choose a refund or exchange. Your satisfaction is our priority.</p>
+                                <p><span>Delivery:</span> Fast and reliable shipping options. Track your order and enjoy worldwide delivery.</p>
+                                <p><span>Return:</span> 30-day return policy. Hassle-free process. Choose a refund or exchange. Your satisfaction is our priority.</p>
                             </div>
                         </div>
                     </div>
