--- a/scss/_show_Room.scss
+++ b/scss/_show_Room.scss
@@ -179,6 +179,7 @@
                     width:100%;
                     height: auto;
                     cursor: pointer;
+                    transition: all 0.3s ease;
                     &:hover > .deliveryIcon{
                         transform:scale(107%);
                     }
