--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,7 @@
 @import "_store";
 @import "_my_Cart";
 @import "_new_Arrivals";
+@import "_sign_In_&_Create_Account";
 @import "_purchase_Order";
 @import "_wish_List";
 @import "_place_Order";
