--- a/views/store.html
+++ b/views/store.html
@@ -40,7 +40,7 @@
         <section class="menuIcons">
             <ul>
                 <li><a href="#"><img class="icon" src="../img/moon_Icon.svg" alt=""></a></li>
-                <li><a href="sign_In.html"><img class="icon" src="../img/user_Icon.svg" alt=""></a></li>
+                <li><a href="sign_In_&_Create_Account.html"><img class="icon" src="../img/user_Icon.svg" alt=""></a></li>
                 <li>
                     <label for="wishlistSide" class="wishHeadLine">
                         <img class="wishlistIcon" src="../img/wishlist_White_Icon.svg" alt="Heart icon">
@@ -65,7 +65,7 @@
             </section>
             <section class="menu">
                 <ul>
-                    <li><a href="sign_In.html" class="link">Sign in</a></li>
+                    <li><a href="sign_In_&_Create_Account.html" class="link">Sign in</a></li>
                     <li>
                         <label for="cart" class="cartShop">
                             <p href="#" class="link">My cart</p>
